--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"vite": "^4.0.0"
 	},
 	"dependencies": {
-		"firebase": "^10.7.2"
+		"firebase": "^10.7.2",
+		"firebase-admin": "^12.0.0"
 	}
 }
